# quant_showcase

./: README.md  pyproject.toml  requirements.txt
configs/: project1.yaml  project2.yaml  project3.yaml
core/: portfolio.py  utils.py
project1/: model.py  pipeline.py
project2/: pipeline.py
project3/: env.py
quant_showcase/: cli.py
quant_showcase/core/: __init__.py  metrics.py  types.py
quant_showcase/project1/: graph.py
quant_showcase/project2/: __init__.py  pricing.py
quant_showcase/project3/: agents.py  pipeline.py
src/quant_showcase/: __init__.py  main.py
src/quant_showcase/core/: metrics.py  portfolio.py  types.py
src/quant_showcase/project1/: __init__.py  data.py  graph.py  model.py  pipeline.py
src/quant_showcase/project2/: pipeline.py  pricing.py
src/quant_showcase/project3/: __init__.py  agents.py  env.py  pipeline.py
tests/: test_cli.py  test_project1.py  test_project2.py  test_project3.py
